
- Multiple `-fdebug-prefix-map` options should now be handled correctly.

- Fixed matching of directories in the `ignore_headers_in_manifest`
  configuration option.

- Fixed detection of missing argument to `-opt`/`--options-file`.

- ccache now bails out when building a precompiled header if any of the
  corresponding header files have an updated timestamp. This fixes complaints
  from clang.


ccache 3.3.4
------------
Release date: 2017-02-17

New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Documented the different cache statistics counters.


Bug fixes
~~~~~~~~~

- Fixed a regression in ccache 3.3 related to potentially bad content of
  dependency files when compiling identical source code but with different
  source paths. This was only partially fixed in 3.3.2 and reverts the new
  ``Names of included files are no longer included in the hash of the
  compiler's preprocessed output'' feature in 3.3.

- Corrected statistics counter for `-optf`/`--options-file` failure.

- Fixed undefined behavior warnings in ccache found by `-fsanitize=undefined`.


ccache 3.3.3
------------
Release date: 2016-10-26

Bug fixes
~~~~~~~~~

- ccache now detects usage of `.incbin` assembler directives in the source code
  and avoids caching such compilations.


ccache 3.3.2
------------
Release date: 2016-09-28

Bug fixes
~~~~~~~~~

- Fixed a regression in ccache 3.3 related to potentially bad content of
  dependency files when compiling identical source code but with different
  source paths.

- Fixed a regression in ccache 3.3.1: ccache could get confused when using the
  compiler option `-Wp,` to pass multiple options to the preprocessor,
  resulting in missing dependency files from direct mode cache hits.


ccache 3.3.1
------------
Release date: 2016-09-07

Bug fixes
~~~~~~~~~

- Fixed a problem in the ``multiple `-arch` options'' support introduced in
  3.3. When using the direct mode (the default), different combinations of